infra/k8s/rabbitmq/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  labels:
    trust.codedang.com/rabbitmq: 'true'
