infra/k8s/rabbitmq/base/HTTPRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-console-httproute
  namespace: rabbitmq
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-wildcard
  hostnames:
    - rabbitmq.codedang.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rabbitmq
          port: 15671
